--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-modal": "^3.11.2",
+    "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
